@@ -86,6 +86,7 @@ function checkzero () {
 		echo "n"
 	fi
 }
+
 ############################################################################
 # Interrupt Handlers
 ############################################################################
